--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,15 @@
 *node_modules
 *test.js
 *basic.html
+*utilities-other.html
+*utilities-color.html
+*utilities-border.html
+*login.html
+*register.html
+*tables.html
+*utilities-animation.html
+*forgot-password.html
+*charts.html
+*cards.html
+*buttons.html
+*blank.html
